Refactoring areas and locations creation flyouts

--- a/client/lib/components/navigations/top/view.html
+++ b/client/lib/components/navigations/top/view.html
@@ -13,7 +13,7 @@
             </span>
           </li>
           <li>
-            <a class="count-info open-flyout" data-id="organizationStructure"><i class="fa fa-sitemap"></i></a>
+            <a class="count-info organization-structure-flyout"><i class="fa fa-sitemap"></i></a>
           </li>
         {{/if}}
         <li class="dropdown">
