--- a/client/lib/components/organizations/areas/create_area/view.html
+++ b/client/lib/components/organizations/areas/create_area/view.html
@@ -1,28 +1,40 @@
 <template name="createArea">
-  <form method="get" class="form-horizontal">
-    <div class="form-group">
-      <label class="col-sm-2 control-label">Area Name</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" name="name" required="required">
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="col-sm-2 control-label">Area Location</label>
-      <div class="col-sm-10">
-        {{> render component='selectComponent' name='locationId' values=state$locations selected=state$activeLocation}}
-      </div>
-    </div>
+  <div class="flyout-header">
+    <button class="close-flyout-button">
+      <i class="fa fa-angle-right"></i>
+    </button>
+    Add Area
+  </div>
 
-    <div class="form-group">
-      <label class="col-sm-2 control-label">Area Color</label>
-      <div class="col-sm-10">
-        {{>render component="colorPicker" onColorChange=state$onColorChange}}
-      </div>
-    </div>
+  <div class="flyout-content">
+    <form method="get" class="form-horizontal">
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Area Name</label>
 
-    <div class="btn-group col-xs-12">
-      <button type="submit" class="btn btn-primary col-xs-6">Create</button>
-      <button type="button" class="btn btn-default col-xs-6 close-flyout">Close</button>
-    </div>
-  </form>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" name="name" required="required">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Area Location</label>
+
+        <div class="col-sm-10">
+          {{> render component='selectComponent' name='locationId' values=state$locations selected=state$activeLocation}}
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Area Color</label>
+
+        <div class="col-sm-10">
+          {{>render component="colorPicker" onColorChange=state$onColorChange}}
+        </div>
+      </div>
+
+      <div class="btn-group col-xs-12">
+        <button type="submit" class="btn btn-primary col-xs-6">Create</button>
+        <button type="button" class="btn btn-default col-xs-6 close-flyout">Close</button>
+      </div>
+    </form>
+  </div>
 </template>
