--- a/client/lib/components/organizations/organization_details/view.html
+++ b/client/lib/components/organizations/organization_details/view.html
@@ -1,5 +1,11 @@
 <template name="organizationDetailsPage">
-  <div class="wrapper wrapper-content animated fadeInRight ecommerce">
+  <div class="flyout-header">
+    <button class="close-flyout-button">
+      <i class="fa fa-angle-right"></i>
+    </button>
+    Invitations List
+  </div>
+  <div class="flyout-content">
     <div class="row">
       <div class="col-lg-12">
         <ul class="list-group" style="display: block;">
@@ -9,7 +15,7 @@
     <div class="row" style="display: block;">
       <div class="col-md-12" style="display: block;">
         <ul class="list-group" style="display: block;">
-          <li class="list-group-item open-flyout" data-id="changeBillingAccount">
+          <li class="list-group-item change-billing-account-flyout">
             <span class="badge">
               <i class="fa fa-fw fa-angle-right"></i>
             </span>
@@ -22,28 +28,4 @@
     <hr />
     <button type="button" class="btn btn-danger btn-block delete-organization" data-id="{{state$organizationId}}">Delete Organisation</button>
   </div>
-
-  <!-- Flyout changeBillingAccount -->
-  <div class="theme-config flyout-container" id="changeBillingAccount">
-    <div class="theme-config-box">
-      <div class="skin-setttings">
-        <div class="white-notify-bg">
-          <div class="title clearfix">
-            <a href="#" class="theme-config-close-btn" data-id="changeBillingAccount">
-              <i class="fa fa-angle-right"></i>
-            </a>
-            Change billing account
-          </div>
-          <div class="ibox float-e-margins" style="margin-bottom: 0;">
-            <div class="ibox-content" style="padding-bottom: 10px;">
-              <div class="feed-activity-list">
-                {{> render component="changeBillingAccount"}}
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Flyout changeBillingAccount -->
 </template>
