--- a/client/lib/components/sales-prediction/pos-menu-linking/pos-link-item/pos-edit-item/view.html
+++ b/client/lib/components/sales-prediction/pos-menu-linking/pos-link-item/pos-edit-item/view.html
@@ -1,5 +1,5 @@
 <template name="posEditItem">
-  <div class="col-md-12">
+  <div class="">
     {{state$getName}}
     <a href='#' class="delete-pos-name text-danger pull-right">
       <i class="fa fa-trash"></i>
