--- a/client/lib/components/sales-prediction/pos-menu-linking/pos-link-item/select-pos/view.html
+++ b/client/lib/components/sales-prediction/pos-menu-linking/pos-link-item/select-pos/view.html
@@ -1,12 +1,12 @@
 <template name="selectPos">
-  <div class="col-md-10">
-    <select class="selectPosName form-control">
-      {{#each state$allPos}}
-        <option>{{this.name}}</option>
-      {{/each}}
-    </select>
-  </div>
-  <div class="col-md-2">
+  <div class="add-new-pos-name-section">
+    <div class="select-wrapper">
+      <select class="selectPosName form-control">
+        {{#each state$allPos}}
+          <option>{{this.name}}</option>
+        {{/each}}
+      </select>
+    </div>
     <button class="btn btn-primary btn-sm add-pos-btn">Add</button>
   </div>
 </template>
