--- a/client/lib/components/sales-prediction/pos-menu-linking/pos-link-item/view.html
+++ b/client/lib/components/sales-prediction/pos-menu-linking/pos-link-item/view.html
@@ -1,24 +1,25 @@
 <template name="revelLinkMenuItem">
-  <div class="row success-element revel-link-menu-item-component">
-    {{#with state$menuItem}}
-      <div class="col-md-12">
-        <b>{{name}}</b>
-        <a href="#" class="pull-right text-info">
-          <i class="fa fa-plus-circle fa-lg add-pos-name"></i>
-        </a>
-      </div>
-      {{#if state$attachPosName}}
-        {{>render component='selectPos' item=this}}
-      {{/if}}
-
-      <hr>
-      <div class="col-md-12">
-        <div class="row">
+  <div class="col-md-6 ">
+    <div class="revel-link-menu-item-component">
+      {{#with state$menuItem}}
+        <div class="menu-item-name">
+          <b>{{name}}</b>
+          <a href="#" class="pull-right text-info">
+            <i class="fa fa-plus-circle fa-lg add-pos-name"></i>
+          </a>
+        </div>
+        <div>
           {{#each state$posNames}}
             {{>render component="posEditItem" name=this item=..}}
           {{/each}}
         </div>
-      </div>
-    {{/with}}
+
+        <div>
+          {{#if state$attachPosName}}
+            {{>render component='selectPos' item=this}}
+          {{/if}}
+        </div>
+      {{/with}}
+    </div>
   </div>
 </template>
