Started implementing single menu item synchronized method

--- a/client/stylesheets/components/pos-menu-linking.less
+++ b/client/stylesheets/components/pos-menu-linking.less
@@ -25,6 +25,8 @@
     }
 
     .add-new-pos-name-section {
+      margin-top: 10px;
+
       .select-wrapper {
         display: inline-block;
         width: 80%;
