improved price column for menu item

--- a/client/lib/components/menu-items/prep_or_stock/item/view.html
+++ b/client/lib/components/menu-items/prep_or_stock/item/view.html
@@ -23,7 +23,7 @@
         {{/if}}
       </td>
       <td>
-        {{state$price}}
+        $ {{state$price}}
       </td>
       {{#if canEditMenu}}
         <td>
