--- a/client/lib/components/sales-prediction/weather-forecast/view.html
+++ b/client/lib/components/sales-prediction/weather-forecast/view.html
@@ -3,7 +3,7 @@
     {{#if state$hasForecast}}
       {{#with state$forecast}}
         <div class="weather-icon-wrapper">
-          <img src={{icon}}>
+          <i class='{{state$iconClass}}'></i>
         </div>
         {{main}}, {{state$roundedTemperature}}&deg;C
       {{/with}}
