Fixing timezone chooser

--- a/client/stylesheets/components/flyout.less
+++ b/client/stylesheets/components/flyout.less
@@ -37,6 +37,10 @@
 
     .flyout-content {
       padding: @padding;
+
+      .flyout-content-scroll {
+        overflow: auto;
+      }
     }
   }
 }
