--- a/client/lib/components/organizations/locations/location_settings/view.html
+++ b/client/lib/components/organizations/locations/location_settings/view.html
@@ -7,17 +7,20 @@
   </div>
 
   <div class="flyout-content">
-    {{#if isOrganizationOwner}}
-      <h1 class="location-name" style="display: inline-block"
-          data-id="{{state$locationId}}">{{state$location.name}}</h1>
-    {{else}}
-      <h1>{{state$location.name}}</h1>
-    {{/if}}
+    <div class="flyout-content-scroll">
+      {{#if isOrganizationOwner}}
+        <h1 class="location-name" style="display: inline-block"
+            data-id="{{state$locationId}}">{{state$location.name}}</h1>
+      {{else}}
+        <h1>{{state$location.name}}</h1>
+      {{/if}}
 
-    <button class="btn btn-primary col-xs-12 open-flyout" data-id="createArea" data-location-id="{{state$locationId}}">
-      Create Area
-    </button>
+      <button class="btn btn-primary col-xs-12 open-flyout" data-id="createArea"
+              data-location-id="{{state$locationId}}">
+        Create Area
+      </button>
 
-    {{> render component="editLocation" location=state$location}}
+      {{> render component="editLocation" location=state$location}}
+    </div>
   </div>
 </template>
