Fixing create area from location settings flyout

--- a/client/lib/components/organizations/locations/location_settings/view.html
+++ b/client/lib/components/organizations/locations/location_settings/view.html
@@ -15,8 +15,7 @@
         <h1>{{state$location.name}}</h1>
       {{/if}}
 
-      <button class="btn btn-primary col-xs-12 open-flyout" data-id="createArea"
-              data-location-id="{{state$locationId}}">
+      <button class="btn btn-primary col-xs-12 create-area-flyout">
         Create Area
       </button>
 
