--- a/client/lib/components/organizations/areas/create_area/view.html
+++ b/client/lib/components/organizations/areas/create_area/view.html
@@ -19,7 +19,7 @@
         <label class="col-sm-2 control-label">Area Location</label>
 
         <div class="col-sm-10">
-          {{> render component='selectComponent' name='locationId' values=state$locations selected=state$activeLocation}}
+          {{> render component='selectComponent' name='locationId' values=state$locations selected=state$locationId}}
         </div>
       </div>
 
