--- a/client/stylesheets/components/flyout.less
+++ b/client/stylesheets/components/flyout.less
@@ -11,12 +11,18 @@
     //some custom elements:
     .flyout-header {
       background: #e8e8e8;
-      padding: 21px 10px;
+      padding: 20px 10px;
+      height: 60px;
       box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.175);
       font-size: 13px;
       text-transform: uppercase;
       font-weight: bold;
       text-align: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 50;
 
       .close-flyout-button {
         height: 60px;
@@ -32,14 +38,25 @@
 
       .organization-settings-buttons {
         margin-top: -6px;
+
+        .btn-group {
+          padding: 5px 10px;
+        }
       }
+
     }
 
     .flyout-content {
       padding: @padding;
+      position: absolute;
+      top: 50px;
+      bottom: 0;
+      left: 0;
+      overflow: auto;
+      right: 0;
 
-      .flyout-content-scroll {
-        overflow: auto;
+      .flyout-content-extra-padding {
+        padding-top: 20px;
       }
     }
   }
