--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/view.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/view.html
@@ -1,9 +1,22 @@
 <template name="weeklyRosterDay">
-  <div class="col-lg-13">
+  <div class="col-lg-13 weekly-roster-day-container">
     <!--head with date-->
     <h4>{{weekDateName state$currentDate}}</h4>
     {{#unless state$hasTemplateType}}
       <h4>{{dateFormat state$currentDate}}</h4>
+    {{/unless}}
+
+    {{#unless state$hasTemplateType}}
+      {{#if canViewRoster}}
+        <span class="manager-note-flyout">
+          <i class="fa fa-sticky-note"></i>
+          {{#if state$managerNotesCount}}
+            <span class="manager-notes-count label label-primary">
+              {{state$managerNotesCount}}
+            </span>
+          {{/if}}
+        </span>
+      {{/if}}
     {{/unless}}
 
     {{#if canEditRoster}}
