Adding functionality to create manager notes

--- a/client/stylesheets/components/manager-notes.less
+++ b/client/stylesheets/components/manager-notes.less
@@ -19,3 +19,15 @@
     }
   }
 }
+
+.manager-notes-editor {
+  textarea {
+    resize: none;
+    height: 75px;
+  }
+
+  .close-editor {
+    cursor: pointer;
+    font-size: 20px;
+  }
+}
