Fixing newsfeeds notifications

--- a/client/lib/components/newsfeed/item/view.html
+++ b/client/lib/components/newsfeed/item/view.html
@@ -5,7 +5,7 @@
         <img src="{{profilePicture state$post.createdBy}}" alt="image">
       </a>
       <div class="media-body">
-        <a href="#" name="{{state$post._id}}">{{username state$post.createdBy}}</a>
+        <a href="#" id="{{state$post._id}}">{{username state$post.createdBy}}</a>
         <a href="#" class="small thumbsup-like pull-left like-post">
           <i class="fa fa-thumbs-up"></i> 
           {{#if state$liked}} You and {{else}} {{/if}} {{state$likesCount}} Like this!
