--- a/client/lib/components/newsfeed/sub_item/view.html
+++ b/client/lib/components/newsfeed/sub_item/view.html
@@ -5,7 +5,7 @@
     </a>
     <div class="media-body" id="{{state$post.createdBy}}">
       <span>
-        <a href="#" class="pull-left" name="{{state$post._id}}">{{username state$post.createdBy}} &nbsp;&nbsp;</a>  {{{state$post.text}}}
+        <a href="#" class="pull-left" id="{{state$post._id}}">{{username state$post.createdBy}} &nbsp;&nbsp;</a>  {{{state$post.text}}}
       </span>
       <a href="#" class="small like-post">
         <i class="fa fa-thumbs-up"></i> 
