--- a/client/lib/components/reports/team_hours/view.html
+++ b/client/lib/components/reports/team_hours/view.html
@@ -28,5 +28,8 @@
         </tbody>
       </table>
     </div>
+    <div class="col-xs-12">
+      <button class="btn btn-primary">Add worker</button>
+    </div>
   </div>
 </template>
