--- a/client/lib/components/user_unavailabilities/unavailabilities/view.html
+++ b/client/lib/components/user_unavailabilities/unavailabilities/view.html
@@ -1,6 +1,6 @@
 <template name="unavailabilitiesComponent">
   <div class="component-wrapper">
-    <div class="row">
+    <div class="row component-header">
 
       <!-- Component name(unavailability or leave request) -->
       <div class="col-md-6">
