--- a/client/lib/components/shift-update/view.html
+++ b/client/lib/components/shift-update/view.html
@@ -1,11 +1,11 @@
-<template name="cronConfig">
+<template name="shitUpdateNotificationConfig">
   <div class="panel-body">
     <div class="row">
       <div class="col-lg-12">
         <div class="row">
           <div class="col-lg-5 alert-area"></div>
         </div>
-        <label for="cron-time">Set cron time for Shift Updates Email Sending</label>
+        <label for="cron-time">Set time for Shift Updates to Email sending</label>
         <div class="col-xs-12">
           <span class="editable" style="font-size: 20px;">{{state$shiftUpdateHour}}</span>
           <span style="font-size: 15px;">:00</span>
