--- a/client/lib/components/organizations/locations/create_location/view.html
+++ b/client/lib/components/organizations/locations/create_location/view.html
@@ -41,7 +41,7 @@
         <label class="col-sm-2 control-label">Timezone</label>
 
         <div class="col-sm-10">
-          {{> render component='selectComponent' values=timezones selected='0' name='timezone'}}
+          {{> timezonePicker class="form-control time-zone-select" selected=usersTimeZone}}
         </div>
       </div>
       <div class="form-group">
