Remove redundant stuff from create location form

--- a/client/lib/components/organizations/locations/create_location/view.html
+++ b/client/lib/components/organizations/locations/create_location/view.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="flyout-content">
-    <form method="get" class="form-horizontal" data-id="{{state$organizationId}}">
+    <form class="form-horizontal">
       <div class="form-group">
         <label class="col-sm-2 control-label">Location Name</label>
 
