--- a/client/lib/components/organizations/locations/location_settings/view.html
+++ b/client/lib/components/organizations/locations/location_settings/view.html
@@ -7,17 +7,18 @@
   </div>
 
   <div class="flyout-content">
-    {{#if isOrganizationOwner}}
-      <h1 class="location-name" style="display: inline-block"
-          data-id="{{state$locationId}}">{{state$location.name}}</h1>
-    {{else}}
       <h1>{{state$location.name}}</h1>
-    {{/if}}
 
     <button class="btn btn-primary col-xs-12 create-area-flyout">
       Create Area
     </button>
 
-    {{> render component="editLocation" location=state$location}}
+    {{> render component="editLocationForm" locationDoc=state$location submitCaption="Save" onSubmit=state$onLocationSubmit onCancel=state$onCancel}}
+
+    {{#if isOrganizationOwner}}
+      <button class="btn btn-danger col-xs-12 delete-location">
+        Delete Location
+      </button>
+    {{/if}}
   </div>
 </template>
