Adding leave requests

--- a/client/lib/components/user_unavailabilities/leave_requests/leave_request_item/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/leave_request_item/view.html
@@ -44,11 +44,9 @@
               </p>
             </div>
 
-            <!-- View details -->
+            <!-- Delete button -->
             <div class="row">
-              <button id="viewLeaveRequestBtn" class="btn btn-white btn-xs pull-right">
-                View
-              </button>
+              <i id="removeLeaveRequestBtn" class="fa fa-trash-o delete-icon pull-right" role="button"></i>
             </div>
           </div>
         </div>
