--- a/client/lib/components/user_unavailabilities/unavailabilities/unavailability_item/view.html
+++ b/client/lib/components/user_unavailabilities/unavailabilities/unavailability_item/view.html
@@ -45,7 +45,7 @@
 
         <!-- Delete button -->
         <div class="col-md-1 col-md-offset-1 item-actions">
-          <i id="deleteUnavailabilityBtn" class="fa fa-trash-o delete-icon pull-right" role="button"></i>
+          <i id="removeUnavailabilityBtn" class="fa fa-trash-o delete-icon pull-right" role="button"></i>
         </div>
       </div>
     </div>
