--- a/client/lib/components/user_unavailabilities/user_unavailable.less
+++ b/client/lib/components/user_unavailabilities/user_unavailable.less
@@ -84,3 +84,11 @@
     margin-top: 5px;
   }
 }
+
+.new-leaveRequest {
+  .user-unavailability-general;
+  .approve-decline-btn-wrapper {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
