Multiple checker fixes, location edit fixes

--- a/client/lib/components/organizations/locations/create-location/view.html
+++ b/client/lib/components/organizations/locations/create-location/view.html
@@ -7,6 +7,8 @@
   </div>
 
   <div class="flyout-content">
-    {{> render component="editLocationForm" submitCaption="Create" onSubmit=state$onLocationSubmit onCancel=state$onCancel}}
+    <div class="container-fluid">
+      {{> render component="editLocationForm" submitCaption="Create" onSubmit=state$onLocationSubmit onCancel=state$onCancel}}
+    </div>
   </div>
 </template>
