--- a/client/lib/components/organizations/locations/edit-location-form/view.html
+++ b/client/lib/components/organizations/locations/edit-location-form/view.html
@@ -1,5 +1,5 @@
 <template name="editLocationForm">
-  <form class="form-horizontal edit-location-form-component">
+  <form method="post" class="form-horizontal edit-location-form-component">
     {{#with state$locationDoc}}
       <div class="form-group">
         <label class="col-sm-2 control-label">Location Name</label>
@@ -64,7 +64,7 @@
             <label class="col-sm-2 control-label">Secret</label>
 
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="posSecret" {{pos.secret}}>
+              <input type="text" class="form-control" name="posSecret" value="{{pos.secret}}">
             </div>
           </div>
         </div>
@@ -72,8 +72,8 @@
     {{/with}}
     <div class="form-group">
       <div class="btn-group col-xs-12">
-        <button type="submit" class="btn btn-primary col-xs-6">{{state$submitCaption}}</button>
-        <button type="button" class="btn btn-default col-xs-6 close-flyout">Cancel</button>
+        <button type="submit" class="btn btn-primary btn-half-width">{{state$submitCaption}}</button>
+        <button type="button" class="btn btn-default btn-half-width close-flyout">Cancel</button>
       </div>
     </div>
   </form>
