Remove redudant attr

--- a/client/lib/components/organizations/locations/edit-location-form/view.html
+++ b/client/lib/components/organizations/locations/edit-location-form/view.html
@@ -1,5 +1,5 @@
 <template name="editLocationForm">
-  <form method="post" class="form-horizontal edit-location-form-component">
+  <form class="form-horizontal edit-location-form-component">
     {{#with state$locationDoc}}
       <div class="form-group">
         <label class="col-sm-2 control-label">Location Name</label>
