--- a/client/lib/components/user_unavailabilities/unavailabilities/view.html
+++ b/client/lib/components/user_unavailabilities/unavailabilities/view.html
@@ -17,7 +17,7 @@
     <div>
       {{#if state$items}}
         {{#each state$items}}
-          {{#if state$isUnavailables}}
+          {{#if state$isUnavailabilities}}
             {{> render component="unavailabilityItem" item=this}}
           {{/if}}
           {{#if state$isLeaveRequests}}
