--- a/client/lib/components/user_unavailabilities/user_unavailable.less
+++ b/client/lib/components/user_unavailabilities/user_unavailable.less
@@ -7,8 +7,16 @@
   .user-unavailability-general;
 
   .user-info-wrapper {
+    //margin-left: 20px;
 
+    .profile-content {
+    }
+    .profile-image {
+      width: 140px;
+      height: 100px;
+    }
   }
+
   .component-wrapper {
     margin-top: 20px;
     .component-header {
@@ -16,26 +24,32 @@
         margin-right: -15px;
       }
     }
+
     .item-wrapper {
       margin-bottom: 5px;
+
       .date-cell {
         margin-top: 16px;
         text-align: center;
       }
+
       .unavailability-item-date {
         > div {
           padding: 0;
           width: 50px;
           margin: auto;
+
           p {
             .date-cell;
           }
         }
       }
+
       .leave-requests-item-date {
         > div {
           > div {
             padding: 0;
+
             p {
               .date-cell;
             }
@@ -45,6 +59,7 @@
       .item-details-wrapper {
         border: 1px #e7eaec solid;
         border-radius: 4px;
+
         .item-details {
           > div {
             margin-top: 9px;
@@ -55,10 +70,12 @@
           .delete-icon {
             margin-top: 8px;
           }
+
           > div {
             margin-top: 5px;
             margin-bottom: 5px;
             margin-right: 10px;
+
             .status-approved {
               color: green;
               font-weight: bolder;
