--- a/server/lib/notifications/templates/test.handlebars
+++ b/server/lib/notifications/templates/test.handlebars
@@ -1,15 +1,9 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-      style="font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0; padding: 0;">
-<head>
-  <meta name="viewport" content="width=device-width"/>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-</head>
-<body>
-Hello, {{username}}
+<div>
+  Hello, {{username}}
 
-This is notification test
+  <p>
+    This is notification paragraph test
+  </p>
 
-{{someFormattedDate}}
-
-</body>
-</html>
+  other: {{_notificationId}}
+</div>
