Small fixes and imporved checkers

--- a/client/lib/components/user_unavailabilities/leave_requests/leave_request_item/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/leave_request_item/view.html
@@ -27,7 +27,7 @@
               {{#if state$comment}}
                 <p>{{state$comment}}</p>
               {{else}}
-                <p>Leave Request</p>
+                <p class="text-muted">Leave Request</p>
               {{/if}}
             </div>
           </div>
