--- a/client/lib/components/common/week_picker/view.html
+++ b/client/lib/components/common/week_picker/view.html
@@ -1,9 +1,8 @@
 <template name="weekPicker">
-  <div class="btn-group" role="group">
+  <div class="btn-group week-picker-component" role="group">
     <span class="btn btn-white previous-week"><i class="fa fa-chevron-left"></i></span>
 
     <button type="button"
-            style="padding: 6px"
             class="btn btn-white datepicker">
       {{state$currentWeekStr}}
       <span class="caret"></span>
