Fixed "canUser", using getUserIdsByAction instead of canUser in viewLeaveRequest

--- a/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
@@ -82,7 +82,7 @@
             <div class="col-md-12">
               <select id="notifyManagerSelect" class="form-control">
                 {{#each state$managers}}
-                  <option value={{this._id}}>{{this.name}}</option>
+                  <option value={{this._id}}>{{this.username}}</option>
                 {{/each}}
               </select>
             </div>
