Improved CustomForm and invitations acception

--- a/client/views/shared/invitation-accept/invitation-accept.html
+++ b/client/views/shared/invitation-accept/invitation-accept.html
@@ -6,7 +6,7 @@
       </div>
 
       <div class="at-pwd-form">
-        {{{invitationForm}}}
+        {{> render component="invitationAcceptForm" invitation=invitation}}
       </div>
     </div>
   </div>
